积分兑换 剩余积分的更改

--- a/view/membPointsExchange/membPointsExchange.html
+++ b/view/membPointsExchange/membPointsExchange.html
@@ -211,7 +211,7 @@
                             </div>  
                             <div class="col-xs-4">
                                 <div class="form-group">
-                                    <p class="detail-info"><span>兑换后积分余额：</span>{{exchangeGoodsForm.pointVaule}}</p>
+                                    <p class="detail-info"><span>兑换后积分余额：</span>{{lastPoint}}</p>
                                 </div>
                             </div>   
                             <div class="col-xs-4">
