--- a/view/membPointsExchange/membPointsExchange.html
+++ b/view/membPointsExchange/membPointsExchange.html
@@ -13,7 +13,7 @@
 
 <body ng-app="staffModule">
     <!-- DOM结构开始 -->
-    <div class="history top-line wavy-line" ng-controller="addAdjustInModalCtrl">
+    <div class="history top-line wavy-line" ng-controller="addAdjustInModalCtrl as $ctrl">
         <div class="condition-query fn-clear" ng-cloak>
             <div class="row mb10">
                 <div class="col-xs-1">
