--- a/view/membershiPointManage/membershiPointManage.html
+++ b/view/membershiPointManage/membershiPointManage.html
@@ -23,7 +23,7 @@
                     <div class="row mb10">
                         <div class="col-xs-4">
                             <div class="form-group">
-                                <label class="control-label">{{dateNow}}会员姓名：</label>
+                                <label class="control-label">会员姓名：</label>
                                 <input type="text" class="form-control" placeholder="请输入会员姓名" ng-model="conditionQueryForm.leaguerName">
                             </div>
                         </div>
